# helloed

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: api.rst  conf.py  development.md  index.md  installation.md
src/: gregextoolkitdialog.glade  gregextoolkitdialog.py  hello.py  myhappymapper.py  pyconsole.py  regexlibapis.py  regextoolkitlib.py  terminal.py  widgets.py
src/helloed/: __init__.py  __main__.py  app.py  config.py  events.py  exceptions.py  logging_config.py  security.py
src/helloed/core/: async_files.py  document.py
src/helloed/plugins/: base.py
src/helloed/resources/: __init__.py
src/helloed/ui/: editor_view.py  file_browser.py  main_window.py
src/ui/: gregextoolkitdialog.glade  gregextoolkitdialog.ui  hello.glade  hello.ui
tests/: test_basic.py
tests/unit/: test_config.py  test_document.py  test_security.py
