[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "helloed"
version = "7.0.0"
description = "A PyGTK/PyGObject text editor with syntax highlighting"
readme = "README.md"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Ahmed Youssef", email = "xmonader@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Editors",
]
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.30.0",
    "lxml>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/xmonader/helloed"
Repository = "https://github.com/xmonader/helloed"

[project.scripts]
helloed = "hello:main"

[tool.setuptools]
packages = ["src"]
