[metadata]
name = helloed
version = 7.0.0
description = A Python 3/GTK3 text editor with syntax highlighting
long_description = file: README.md
long_description_content_type = text/markdown
author = Ahmed Youssef
author_email = xmonader@gmail.com
license = GPL-2.0-or-later
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Editors

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyGObject>=3.30.0
    lxml>=4.5.0

[options.extras_require]
dev =
    black>=22.0
    flake8>=4.0
    pytest>=7.0
    pytest-cov>=3.0

[options.entry_points]
console_scripts =
    helloed = src.hello:main

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
